virtual-services.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: homebridge-ui
  namespace: homebridge
spec:
  hosts:
  - homebridge.adamnolan.xyz
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
      - uri:
          prefix: "/"  # This matches all paths
    route:
      - destination:
          host: homebridge-service  # The service to route traffic to
          port:
            number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: camera-ui-vs
  namespace: homebridge
spec:
  hosts:
  - camera-ui.adamnolan.xyz
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
      - uri:
          prefix: "/"  # This matches all paths
    route:
      - destination:
          host: homebridge-service  # The service to route traffic to
          port:
            number: 8081
